added purpose, audience, goal and persona

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -3,8 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <title>Carlos Alvarez the Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="container-fluid">
+    <div class="row">
+            <h1> Purpose </h1>
+        <div class="col-md-2 bg-primary box"><section>.</section></div>
+                 <p> This is a professional portfolio for Carlos Alvarez and showcases his background,                  skill sets and past and present projects as they relate to blockchain technologies and                 his past work experience.</p>
+
+    <h1> Audience </h1>
+        <div class="col-md-2 bg-danger box"><section>.</section></div>
+        <p> This site is targeted to U.S. based small and medium sized businesses who's focus is something other than current
+            technologies of the time.  Target audience: CTO and other executive level decision makers who could use an expert in web            development and specifically within the growing field of blockchain and NFT space.</p>
+    <h1> Goal </h1>
+        <div class="col-md-2 bg-info box"><section>.</section></div>
+        <p> The goal of this site is to provide relevant information about my businesses, interests and skills to
+            initiate conversations with C-level teams.  An additional goal would be to attract more freelance
+        work specifically within the space of blockchain and non-fungible tokens.</p>
+    <section>
+        <h1> Persona </h1>
+        <div class="col-lg-2 bg-success box"><section>.</section></div>
+            <ul>
+                <li><strong>Name:</strong>Glenn Manzig</li>
+                <li><strong>Age:</strong>52</li>
+                <li><strong>Role in Company:</strong>The sole remaining founder of a large regional pizza chain who is struggling to
+                stay relevant in the new age of tech start-up's.  Their pizza is great but their growth has stalled and they need an
+                    edge over their competition.</li>
+                <li><strong>Tech in Use:</strong>Windows desktop computers at work and home.  Apple iPhone 12 with unlimited Facebook access.                       :)</li>
+                <li><strong>Attitudes and Behaviors</strong> Glenn is always busy with meetings and other business related issues                 that take up a lot of his time.  He is also a new grandfather and realizes he wants to spend more time with family than                 deal with the day to day stress of being the head executive of his business.  He won't take your call but he will sit                   down and look at his emails even when he is at home. He makes decisions that will impact hundreds of employees and can't                sift through BS all the time.  He prefers emails to phone calls because he has realized people just want to waste his                   time on the phone.</li>
+                <li><strong>Frustrations and Needs:</strong> Glenn is usually a busy man but the pandemic has brought on a slew of
+                    new problems he was not expecting.  He is losing staff and high level executives at a break neck speed and he needs
+                    to hire yesterday!  He usually relied on face-to-face networking events to find his C-level execs
+                    but has had a hard time transitioning to the "new normal" of online networking.  He is relying heavily on LinkedIN
+                    and personal portfolio websites to pinpoint his next chief technology officer.
+                     </li>
+                <li><strong>Goals:</strong>Glenn needs to find a CTO that can propel his business into the new digital age or his
+                company will get crushed by more nimble food start-ups.  He needs to hire someone within the next 6 weeks that
+                can take some pressure off of him.  He is also open to outsourcing his technology needs but needs a company
+                that understands his business.</li>
+                <li><strong>User Story:</strong>Glenn needs to find a c-level exec in 6 weeks.</li>
+            </ul>
+    </section>
+        </div>
+</div>
 
 </body>
 </html>
