Updated purpose, audience, goal and person.  Added images and bootstrap styling

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -9,45 +9,86 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">PWP</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Current Projects</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Dropdown
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Past Projects</a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
+</header>
 <body>
 <div class="container-fluid">
     <div class="row">
-            <h1> Purpose </h1>
-        <div class="col-md-2 bg-primary box"><section>.</section></div>
-                 <p> This is a professional portfolio for Carlos Alvarez and showcases his background,                  skill sets and past and present projects as they relate to blockchain technologies and                 his past work experience.</p>
+        <h1> Purpose, Audience and Goal </h1>
+        <div class="col-md-3 bg-primary box"><section>.</section>
+        </div>
+            <h4> Purpose: </h4>
+                 <p> This is the professional website of Carlos Alvarez. The purpose of the site is to showcases his                  skill sets and relevant projects as they relate to web/software development and other technology solutions.</p>
 
-    <h1> Audience </h1>
-        <div class="col-md-2 bg-danger box"><section>.</section></div>
-        <p> This site is targeted to U.S. based small and medium sized businesses who's focus is something other than current
-            technologies of the time.  Target audience: CTO and other executive level decision makers who could use an expert in web            development and specifically within the growing field of blockchain and NFT space.</p>
-    <h1> Goal </h1>
-        <div class="col-md-2 bg-info box"><section>.</section></div>
+    <h4> Audience: </h4>
+        <p> This site is targeted to U.S. based medium-sized businesses where core competencies are something other than technology (i.e. architeture firm, restaurant chain).  Target audience: CEO, CTO and other executive level decision makers who could use an expert in technology solutions for small and medium-sized businesses</p>
+    <h4> Goal: </h4>
         <p> The goal of this site is to provide relevant information about my businesses, interests and skills to
             initiate conversations with C-level teams.  An additional goal would be to attract more freelance
         work specifically within the space of blockchain and non-fungible tokens.</p>
     <section>
+    <div class=".container">
         <h1> Persona </h1>
-        <div class="col-lg-2 bg-success box"><section>.</section></div>
+        <div class="col-md-3 bg-success box"><section>.</section></div>
             <ul>
-                <li><strong>Name:</strong>Glenn Manzig</li>
-                <li><strong>Age:</strong>52</li>
-                <li><strong>Role in Company:</strong>The sole remaining founder of a large regional pizza chain who is struggling to
+                <li><strong>Name:</strong>Glenn Zandig</li>
+                <li><strong>Age:</strong>59</li>
+                <li><strong>Tech in Use:</strong>Windows desktop computers at work and home. Internet Explorer Browser.  Apple iPhone 12 with unlimited Facebook access.</li>
+                <li><strong>Family Status:</strong>Married with adult aged kids and grand children</li>
+                <li><strong>Role in Company:</strong>The sole remaining founder and CEO of a large regional pizza chain who is struggling to
                 stay relevant in the new age of tech start-up's.  Their pizza is great but their growth has stalled and they need an
                     edge over their competition.</li>
-                <li><strong>Tech in Use:</strong>Windows desktop computers at work and home.  Apple iPhone 12 with unlimited Facebook access.                       :)</li>
-                <li><strong>Attitudes and Behaviors</strong> Glenn is always busy with meetings and other business related issues                 that take up a lot of his time.  He is also a new grandfather and realizes he wants to spend more time with family than                 deal with the day to day stress of being the head executive of his business.  He won't take your call but he will sit                   down and look at his emails even when he is at home. He makes decisions that will impact hundreds of employees and can't                sift through BS all the time.  He prefers emails to phone calls because he has realized people just want to waste his                   time on the phone.</li>
+                <li><strong>Attitudes and Behaviors</strong> Glenn is always busy with meetings and other business related issues                 that take up a lot of his time.  He is also a new grandfather and realizes he wants to spend more time with family than                 deal with the day to day stress of being the head executive of his business.  He won't take your call but he will sit                   down and look at his emails even when he is at home. He makes decisions that will impact hundreds of employees and can't                sift through BS all the time.  He prefers emails to phone calls because interactions are more easily searched.</li>
                 <li><strong>Frustrations and Needs:</strong> Glenn is usually a busy man but the pandemic has brought on a slew of
                     new problems he was not expecting.  He is losing staff and high level executives at a break neck speed and he needs
-                    to hire yesterday!  He usually relied on face-to-face networking events to find his C-level execs
+                    to hire yesterday!  He doesn't know much about websites much less social media, apps and other industry standard technologies.  He usually relied on face-to-face networking events to find his C-level execs
                     but has had a hard time transitioning to the "new normal" of online networking.  He is relying heavily on LinkedIN
-                    and personal portfolio websites to pinpoint his next chief technology officer.
+                    and personal portfolio websites to pinpoint a solution for his technology needs.
                      </li>
-                <li><strong>Goals:</strong>Glenn needs to find a CTO that can propel his business into the new digital age or his
-                company will get crushed by more nimble food start-ups.  He needs to hire someone within the next 6 weeks that
+                <li><strong>Goals:</strong>Glenn needs to find an individual that can handle his new technology needs and propel his business into the new digital age or his
+                company will get crushed by more nimble food start-ups.  He needs to focus his efforts He needs to hire someone within the next 6 weeks that
                 can take some pressure off of him.  He is also open to outsourcing his technology needs but needs a company
                 that understands his business.</li>
-                <li><strong>User Story:</strong>Glenn needs to find a c-level exec in 6 weeks.</li>
+                <li><strong>User Story:</strong>Glenn needs to find a technology solution in 6 weeks.</li>
             </ul>
+        <img src="img/furious.jpg" class="img-thumbnail" class="img-fluid" alt="...">
+
+    </div>
     </section>
         </div>
 </div>
