--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1> Content Strategy </h1>
-        <p>Content in this webpage will be focused on the portfolio, projects and interests of Carlos Alvarez.</p>
+        <p>Content on this webpage will be focused on the portfolio, projects and interests of Carlos Alvarez.</p>
             <ul>
-                <li>Main landing page/portion of the site will have a pro headshot of Carlos Alvarez and a diagnoal split screen with "Carlos Alvarez: web dev etc etc etc" in the white space.</li>
+                <li>Main landing page/portion of the site will have a pro headshot of Carlos Alvarez and a diagonal split screen with "Carlos Alvarez: web dev etc etc etc" in the white space.</li>
                 <li>The next section will have another "playful" picture of Carlos and a detailed "About Me" portion that will list a few of his accomplishments and interests.</li>
-                <li>Below the "About" section will be 3 cards or  that link to a specific "Project" section with a focus on related projects Carlos has done including "Web Dev", "Creative" and "NFT/Blockchain".  We have not decided if we will link to his current business website as a 4th card.</li>
+                <li>Below the "About" section will be 3 cards that link to a specific "Project" section with a focus on related projects Carlos has done including "Web Dev", "Creative" and "NFT/Blockchain".  We have not decided if we will link to his current business website as a 4th card.</li>
                 <li>Scrolling down past the Project section will be the contact portion of the site.  It will include colorful links to his relevant social media pages, and email contact form and a QR code.  The qr code may not be necessary for the site itself but a qr code is going to be created for print media that links to this site.</li>
                 <li><strong>Other design ideas:</strong></li>
                 <li>A floating header will be applied to the entire 1 Page site that scrollspys down to each section.</li>
