added logos for banners, pictures and contact form

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,8 +12,7 @@
     <!-- Image and text -->
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <img src="/docs/4.3/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-            Carlos Alvarez
+            <img src="documentation/img/Carlos_Alvarez_Sigil_Landscape.png" width="120" height="60" class="d-inline-block align-top" alt="Carlos Alvarez logo">
         </a>
     </nav>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,6 +56,10 @@
     </div>
 </section>
 
+
+<!--
+About Me Section
+-->
 <div class="clearfix bg-light mt-5 max-width: 100%">
     <div class="row">
         <div class="col-12">
@@ -70,6 +73,80 @@
         </div>
     </div>
 </div>
+
+<!--
+Projects-->
+
+<div class="container-fluid mx-5 mt-5">
+    <div class="row align-items-start mr-5 gx-5 mb-5 gy-5">
+        <div class="col-sm-3 text-center">
+            <img src="documentation/img/Paleta%20pal%20social%20club%20(super%20rare).png" class="img-fluid d-block rounded-circle" alt="rare paleta pal">
+            <div class="border p-2 bg-light rounded mt-4 d-inline-flex justify-content-center" style="width: 250px">
+                <p> need full. such lorem! want aenean! go word! yes master doge. much lorem. so layout, much word, very doge! want adipiscing! plz sit. so elit, want adipiscing! such text, many lorem. wow. wow, want adipiscing! many design, need full. very swag! such lorem! very mattis, oh my doge. wow. wow. wow, much lorem. many design, yes master doge!  </p>
+            </div>
+        </div>
+        <div class="col-sm-3 text-center">
+            <img src="img/dogecoin.jpeg" class="img-fluid mx-auto d-block rounded-circle" alt="doge">
+            <div class="border p-2 bg-light rounded mt-4 d-inline-flex justify-content-center" style="width: 250px">
+                <p> such doge, oh my swag. oh my doge. go word! want aenean! oh my ipsum! need full. wow, go word! wow. much full, many design, oh my swag. such lorem! oh my swag. wow. such lorem! go ipsum. plz design! such doge, wow. go ipsum. oh my swag. very swag! plz sit. very amet, many design, i iz cute?! such swag! much text. </p>
+            </div>
+        </div>
+        <div class="col-sm-3 text-center">
+            <img src="img/dogecoin.jpeg" class="img-fluid mx-auto d-block rounded-circle" alt="doge">
+            <div class="border p-2 bg-light rounded mt-4 d-inline-flex" style="width: 250px">
+                <p> want adipiscing! need full. need layout. need layout. oh my ipsum! need layout. so elit, wow. many design, many design! very amet, wow, plz consectetur, rate me, very mattis, much text. go word! very swag! txt me! much text. i can haz layout. yes master doge! such swag! much text. oh my doge. very mattis, plz design! many design, very amet, i iz cute?, </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!--//Contact Form//-->
+
+<form>
+    <div class="form-row">
+        <div class="col-md-4 mb-3">
+            <label for="validationDefault01">First name</label>
+            <input type="text" class="form-control" id="validationDefault01" placeholder="First name" value="" required>
+        </div>
+        <div class="col-md-4 mb-3">
+            <label for="validationDefault02">Last name</label>
+            <input type="text" class="form-control" id="validationDefault02" placeholder="Last name" value="" required>
+        </div>
+        <div class="col-md-4 mb-3">
+            <label for="validationDefaultUsername">Username</label>
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroupPrepend2">@</span>
+                </div>
+                <input type="text" class="form-control" id="validationDefaultUsername" placeholder="Username" aria-describedby="inputGroupPrepend2" required>
+            </div>
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="col-md-6 mb-3">
+            <label for="validationDefault03">City</label>
+            <input type="text" class="form-control" id="validationDefault03" placeholder="City" required>
+        </div>
+        <div class="col-md-3 mb-3">
+            <label for="validationDefault04">State</label>
+            <input type="text" class="form-control" id="validationDefault04" placeholder="State" required>
+        </div>
+        <div class="col-md-3 mb-3">
+            <label for="validationDefault05">Zip</label>
+            <input type="text" class="form-control" id="validationDefault05" placeholder="Zip" required>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+            <label class="form-check-label" for="invalidCheck2">
+                Agree to terms and conditions
+            </label>
+        </div>
+    </div>
+    <button class="btn btn-primary" type="submit">Submit form</button>
+</form>
 
 
 
