--- a/public_html/index.html
+++ b/public_html/index.html
@@ -38,21 +38,18 @@
                     <a class="dropdown-item" href="#">Something else here</a>
                 </div>
             </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
         </ul>
     </div>
 </nav>
 <body class="$font-family-sans-serif:">
 
 <section>
-    <div class="container-fluid m-5 bg-light">
-            <img src="documentation/img/Crop%20This.JPG" alt="Carlos Alvarez" class="p-3 mb-2 bg-gradient-info text-white img-fluid max-width: 100%; and height: auto">
-        <div class="centered text-white">
-            <h1>Carlos Alvarez</h1>
-            <h4> Web Development/Creative/Blockchain</h4>
-        </div>
+    <div class="centered text-white">
+        <h1>Carlos Alvarez</h1>
+        <h4> Web Development/Creative/Blockchain</h4>
+    </div>
+    <div class="container-fluid bg-light">
+            <img src="documentation/img/Carlos%20Fall%202021.2.jpg" alt="Carlos Alvarez" class="p-3 mb-2 bg-gradient-info text-white img-fluid max-width: 100%; and height: auto">
     </div>
 </section>
 
@@ -60,13 +57,13 @@
 <!--
 About Me Section
 -->
+<h1>About Carlos</h1>
 <div class="clearfix bg-light mt-5 max-width: 100%">
     <div class="row">
-        <div class="col-12">
-    <h1>About Carlos</h1>
-    <img src="documentation/img/Squinty%20Carlos.jpg" class="img-fluid d-block col-md-6 float-md-end p-5" alt="good boi">
+        <div class="col">
+    <img src="documentation/img/Squinty%20Carlos.jpg" class="img-fluid d-block float-md-end p-5" alt="good boi">
         </div>
-    <div class=" col-8 mx-4 p-5">
+    <div class="col-6 mt-4">
         <p>such lorem, i can haz layout! want layout, oh my lorem. go swag, very elit, want ipsum! much doge, go swag, go swag, i can haz layout! many design. rate me, much full, many design. wow, want layout, need design! i iz cute?! very elit, want layout, such word. oh my lorem. so lorem! i iz cute?! wow, oh my mattis. wow! much word, wow, much amet. wow, plz text, wow. i iz cute?! so lorem! many adipiscing, very text. wow. such doge, such doge, so ipsum, wow, much amet. plz swag, rate me! much amet. such lorem, many adipiscing, go swag,
         </p>
     </div>
@@ -79,20 +76,20 @@ Projects-->
 
 <div class="container-fluid mx-5 mt-5">
     <div class="row align-items-start mr-5 gx-5 mb-5 gy-5">
-        <div class="col-sm-3 text-center">
+        <div class="col-sm-4 text-center">
             <img src="documentation/img/Paleta%20pal%20social%20club%20(super%20rare).png" class="img-fluid d-block rounded-circle" alt="rare paleta pal">
             <div class="border p-2 bg-light rounded mt-4 d-inline-flex justify-content-center" style="width: 250px">
                 <p> need full. such lorem! want aenean! go word! yes master doge. much lorem. so layout, much word, very doge! want adipiscing! plz sit. so elit, want adipiscing! such text, many lorem. wow. wow, want adipiscing! many design, need full. very swag! such lorem! very mattis, oh my doge. wow. wow. wow, much lorem. many design, yes master doge!  </p>
             </div>
         </div>
-        <div class="col-sm-3 text-center">
-            <img src="img/dogecoin.jpeg" class="img-fluid mx-auto d-block rounded-circle" alt="doge">
+        <div class="col-sm-4 text-center">
+            <img src="documentation/img/Paleta%20pal%20social%20club%20(super%20rare).png" class="img-fluid d-block rounded-circle" alt="rare paleta pal">
             <div class="border p-2 bg-light rounded mt-4 d-inline-flex justify-content-center" style="width: 250px">
                 <p> such doge, oh my swag. oh my doge. go word! want aenean! oh my ipsum! need full. wow, go word! wow. much full, many design, oh my swag. such lorem! oh my swag. wow. such lorem! go ipsum. plz design! such doge, wow. go ipsum. oh my swag. very swag! plz sit. very amet, many design, i iz cute?! such swag! much text. </p>
             </div>
         </div>
-        <div class="col-sm-3 text-center">
-            <img src="img/dogecoin.jpeg" class="img-fluid mx-auto d-block rounded-circle" alt="doge">
+        <div class="col-sm-4 text-center">
+            <img src="documentation/img/Paleta%20pal%20social%20club%20(super%20rare).png" class="img-fluid d-block rounded-circle" alt="rare paleta pal">
             <div class="border p-2 bg-light rounded mt-4 d-inline-flex" style="width: 250px">
                 <p> want adipiscing! need full. need layout. need layout. oh my ipsum! need layout. so elit, wow. many design, many design! very amet, wow, plz consectetur, rate me, very mattis, much text. go word! very swag! txt me! much text. i can haz layout. yes master doge! such swag! much text. oh my doge. very mattis, plz design! many design, very amet, i iz cute?, </p>
             </div>
@@ -103,7 +100,7 @@ Projects-->
 
 <!--//Contact Form//-->
 
-<form>
+<form class="m-5 p-3">
     <div class="form-row">
         <div class="col-md-4 mb-3">
             <label for="validationDefault01">First name</label>
@@ -153,5 +150,8 @@ Projects-->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="script.js"></script>
+<script src="https://unpkg.com/popmotion/dist/popmotion.global.min.js"></script>
+
 </body>
 </html>
