added font awesome

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,30 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Carlos Alvarez</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <!-- Image and text -->
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <img src="documentation/img/Carlos_Alvarez_Sigil_Landscape.png" width="120" height="60" class="d-inline-block align-top" alt="Carlos Alvarez logo">
+            <img src="documentation/img/Carlos%20Alvarez%20Sigil%20(navbar%20logo).png" width="30" height="30"
+                 class="d-inline-block align-top" alt="Carlos Alvarez logo">
+            Carlos Alvarez
         </a>
     </nav>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
                     Projects
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -39,17 +46,24 @@
                 </div>
             </li>
         </ul>
+        <ul class="navbar-nav sm-icons">
+            <li class="nav-item"><a class="nav-link" href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li class="nav-item"><a class="nav-link" href="#"><i class="fa-brands fa-github-square"></i></a></li>
+        </ul>
     </div>
 </nav>
 <body class="$font-family-sans-serif:">
 
 <section>
-    <div class="centered text-white">
+    <div class="row centered text-white">
+        <div class="col-9">
         <h1>Carlos Alvarez</h1>
         <h4> Web Development/Creative/Blockchain</h4>
+        </div>
     </div>
-    <div class="container-fluid bg-light">
-            <img src="documentation/img/Carlos%20Fall%202021.2.jpg" alt="Carlos Alvarez" class="p-3 mb-2 bg-gradient-info text-white img-fluid max-width: 100%; and height: auto">
+    <div class="bg-light">
+        <img src="documentation/img/Carlos%20Fall%202021.2.jpg" alt="Carlos Alvarez"
+             class="p-3 mb-2 bg-gradient-info text-white img-fluid max-width: 100%; and height: auto">
     </div>
 </section>
 
@@ -61,14 +75,19 @@ About Me Section
 <div class="clearfix bg-light mt-5 max-width: 100%">
     <div class="row">
         <div class="col">
-    <img src="documentation/img/Squinty%20Carlos.jpg" class="img-fluid d-block float-md-end p-5" alt="good boi">
+            <img src="documentation/img/Squinty%20Carlos.jpg" class="img-fluid d-block float-md-end p-5" alt="good boi">
         </div>
-    <div class="col-6 mt-4">
-        <p>such lorem, i can haz layout! want layout, oh my lorem. go swag, very elit, want ipsum! much doge, go swag, go swag, i can haz layout! many design. rate me, much full, many design. wow, want layout, need design! i iz cute?! very elit, want layout, such word. oh my lorem. so lorem! i iz cute?! wow, oh my mattis. wow! much word, wow, much amet. wow, plz text, wow. i iz cute?! so lorem! many adipiscing, very text. wow. such doge, such doge, so ipsum, wow, much amet. plz swag, rate me! much amet. such lorem, many adipiscing, go swag,
-        </p>
-    </div>
+        <div class="col-6 mt-4">
+            <p>such lorem, i can haz layout! want layout, oh my lorem. go swag, very elit, want ipsum! much doge, go
+                swag, go swag, i can haz layout! many design. rate me, much full, many design. wow, want layout, need
+                design! i iz cute?! very elit, want layout, such word. oh my lorem. so lorem! i iz cute?! wow, oh my
+                mattis. wow! much word, wow, much amet. wow, plz text, wow. i iz cute?! so lorem! many adipiscing, very
+                text. wow. such doge, such doge, so ipsum, wow, much amet. plz swag, rate me! much amet. such lorem,
+                many adipiscing, go swag,
+            </p>
         </div>
     </div>
+</div>
 </div>
 
 <!--
@@ -77,21 +96,33 @@ Projects-->
 <div class="container-fluid mx-5 mt-5">
     <div class="row align-items-start mr-5 gx-5 mb-5 gy-5">
         <div class="col-sm-4 text-center">
-            <img src="documentation/img/Paleta%20pal%20social%20club%20(super%20rare).png" class="img-fluid d-block rounded-circle" alt="rare paleta pal">
+            <img src="documentation/img/Paleta%20pal%20social%20club%20(super%20rare).png"
+                 class="img-fluid d-block rounded-circle" alt="rare paleta pal">
             <div class="border p-2 bg-light rounded mt-4 d-inline-flex justify-content-center" style="width: 250px">
-                <p> need full. such lorem! want aenean! go word! yes master doge. much lorem. so layout, much word, very doge! want adipiscing! plz sit. so elit, want adipiscing! such text, many lorem. wow. wow, want adipiscing! many design, need full. very swag! such lorem! very mattis, oh my doge. wow. wow. wow, much lorem. many design, yes master doge!  </p>
+                <p> need full. such lorem! want aenean! go word! yes master doge. much lorem. so layout, much word, very
+                    doge! want adipiscing! plz sit. so elit, want adipiscing! such text, many lorem. wow. wow, want
+                    adipiscing! many design, need full. very swag! such lorem! very mattis, oh my doge. wow. wow. wow,
+                    much lorem. many design, yes master doge! </p>
+            </div>
+        </div>
+        <div class="col-sm-4 text-center rounded-circle">
+            <img src="documentation/img/Paleta%20pal%20social%20club%20(super%20rare).png"
+                 class="img-fluid d-block rounded" alt="rare paleta pal">
+            <div class="border p-2 bg-light rounded mt-4 d-inline-flex justify-content-center" style="width: 250px">
+                <p> such doge, oh my swag. oh my doge. go word! want aenean! oh my ipsum! need full. wow, go word! wow.
+                    much full, many design, oh my swag. such lorem! oh my swag. wow. such lorem! go ipsum. plz design!
+                    such doge, wow. go ipsum. oh my swag. very swag! plz sit. very amet, many design, i iz cute?! such
+                    swag! much text. </p>
             </div>
         </div>
         <div class="col-sm-4 text-center">
-            <img src="documentation/img/Paleta%20pal%20social%20club%20(super%20rare).png" class="img-fluid d-block rounded-circle" alt="rare paleta pal">
-            <div class="border p-2 bg-light rounded mt-4 d-inline-flex justify-content-center" style="width: 250px">
-                <p> such doge, oh my swag. oh my doge. go word! want aenean! oh my ipsum! need full. wow, go word! wow. much full, many design, oh my swag. such lorem! oh my swag. wow. such lorem! go ipsum. plz design! such doge, wow. go ipsum. oh my swag. very swag! plz sit. very amet, many design, i iz cute?! such swag! much text. </p>
-            </div>
-        </div>
-        <div class="col-sm-4 text-center">
-            <img src="documentation/img/Paleta%20pal%20social%20club%20(super%20rare).png" class="img-fluid d-block rounded-circle" alt="rare paleta pal">
+            <img src="documentation/img/Paleta%20pal%20social%20club%20(super%20rare).png"
+                 class="img-fluid d-block rounded-circle" alt="rare paleta pal">
             <div class="border p-2 bg-light rounded mt-4 d-inline-flex" style="width: 250px">
-                <p> want adipiscing! need full. need layout. need layout. oh my ipsum! need layout. so elit, wow. many design, many design! very amet, wow, plz consectetur, rate me, very mattis, much text. go word! very swag! txt me! much text. i can haz layout. yes master doge! such swag! much text. oh my doge. very mattis, plz design! many design, very amet, i iz cute?, </p>
+                <p> want adipiscing! need full. need layout. need layout. oh my ipsum! need layout. so elit, wow. many
+                    design, many design! very amet, wow, plz consectetur, rate me, very mattis, much text. go word! very
+                    swag! txt me! much text. i can haz layout. yes master doge! such swag! much text. oh my doge. very
+                    mattis, plz design! many design, very amet, i iz cute?, </p>
             </div>
         </div>
     </div>
@@ -116,7 +147,8 @@ Projects-->
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="inputGroupPrepend2">@</span>
                 </div>
-                <input type="text" class="form-control" id="validationDefaultUsername" placeholder="Username" aria-describedby="inputGroupPrepend2" required>
+                <input type="text" class="form-control" id="validationDefaultUsername" placeholder="Username"
+                       aria-describedby="inputGroupPrepend2" required>
             </div>
         </div>
     </div>
@@ -146,11 +178,16 @@ Projects-->
 </form>
 
 
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="script.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+<script type="module" src="script.js"></script>
 <script src="https://unpkg.com/popmotion/dist/popmotion.global.min.js"></script>
 
 </body>
